# anki-english-learning-assistant

./: MEMO.md  README.md  TODO.md  fruits.csv  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py  sample.py
src/anki_english_learning_assistant/: __init__.py
