[project]
name = "anki-english-learning-assistant"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shota Narisaka", email = "shootacean@gmail.com" }
]
dependencies = [
    "pandas>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "anki_english_learning_assistant:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.2.2",
]

[tool.rye.scripts]
format = "ruff format src/"
lint = "ruff check src/ --fix"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anki_english_learning_assistant"]
